--- a/QT/mainwindow.ui
+++ b/QT/mainwindow.ui
@@ -13,6 +13,10 @@
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
+  <property name="windowIcon">
+   <iconset resource="image.qrc">
+    <normaloff>:/image/icons8-обмен-валюты-48.ico</normaloff>:/image/icons8-обмен-валюты-48.ico</iconset>
+  </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QLabel" name="label">
     <property name="geometry">
