--- a/QT/second_window.ui
+++ b/QT/second_window.ui
@@ -13,17 +13,14 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QLabel" name="label">
+  <widget class="QTableView" name="tableView">
    <property name="geometry">
     <rect>
-     <x>150</x>
-     <y>120</y>
-     <width>111</width>
-     <height>71</height>
+     <x>5</x>
+     <y>11</y>
+     <width>391</width>
+     <height>281</height>
     </rect>
-   </property>
-   <property name="text">
-    <string>Привет!</string>
    </property>
   </widget>
  </widget>
