--- a/QT/second_window.ui
+++ b/QT/second_window.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>776</width>
+    <height>528</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,11 +16,14 @@
   <widget class="QTableView" name="tableView">
    <property name="geometry">
     <rect>
-     <x>5</x>
-     <y>11</y>
-     <width>391</width>
-     <height>281</height>
+     <x>0</x>
+     <y>0</y>
+     <width>771</width>
+     <height>521</height>
     </rect>
+   </property>
+   <property name="cursor" stdset="0">
+    <cursorShape>PointingHandCursor</cursorShape>
    </property>
   </widget>
  </widget>
