--- a/QT/second_window.ui
+++ b/QT/second_window.ui
@@ -11,7 +11,16 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Currence</string>
+  </property>
+  <property name="windowIcon">
+   <iconset theme="zoom-in"/>
+  </property>
+  <property name="inputMethodHints">
+   <set>Qt::ImhNone</set>
+  </property>
+  <property name="modal">
+   <bool>false</bool>
   </property>
   <widget class="QTableView" name="tableView">
    <property name="geometry">
@@ -25,36 +34,38 @@
    <property name="cursor" stdset="0">
     <cursorShape>PointingHandCursor</cursorShape>
    </property>
+   <property name="sortingEnabled">
+    <bool>true</bool>
+   </property>
   </widget>
-  <widget class="QPushButton" name="write">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>0</x>
-     <y>-10</y>
-     <width>111</width>
-     <height>51</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Записать в файл</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="pushButton">
-   <property name="geometry">
-    <rect>
-     <x>120</x>
      <y>0</y>
-     <width>80</width>
-     <height>23</height>
+     <width>224</width>
+     <height>25</height>
     </rect>
    </property>
-   <property name="text">
-    <string>PushButton</string>
-   </property>
+   <layout class="QHBoxLayout" name="horizontalLayout">
+    <item>
+     <widget class="QPushButton" name="write">
+      <property name="text">
+       <string>Записать в файл</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="graph">
+      <property name="text">
+       <string>Показать графы</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
   </widget>
-  <zorder>write</zorder>
+  <zorder>layoutWidget</zorder>
   <zorder>tableView</zorder>
-  <zorder>pushButton</zorder>
  </widget>
  <resources/>
  <connections/>
