--- a/QT/customgraph.ui
+++ b/QT/customgraph.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>600</width>
+    <height>433</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -18,10 +18,62 @@
     <rect>
      <x>9</x>
      <y>10</y>
-     <width>381</width>
-     <height>281</height>
+     <width>581</width>
+     <height>321</height>
     </rect>
    </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>350</y>
+     <width>581</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Построить график</string>
+   </property>
+  </widget>
+  <widget class="QGroupBox" name="groupBox">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>370</y>
+     <width>581</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="title">
+    <string>Функция</string>
+   </property>
+   <widget class="QRadioButton" name="radioButton">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>20</y>
+      <width>99</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>парабола</string>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="radioButton_2">
+    <property name="geometry">
+     <rect>
+      <x>320</x>
+      <y>20</y>
+      <width>99</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>синусоиды</string>
+    </property>
+   </widget>
   </widget>
  </widget>
  <customwidgets>
