--- a/QT/second_window.ui
+++ b/QT/second_window.ui
@@ -44,19 +44,19 @@
     <rect>
      <x>0</x>
      <y>500</y>
-     <width>222</width>
+     <width>561</width>
      <height>25</height>
     </rect>
    </property>
-   <layout class="QHBoxLayout" name="horizontalLayout">
-    <item>
+   <layout class="QGridLayout" name="gridLayout">
+    <item row="0" column="0">
      <widget class="QPushButton" name="write">
       <property name="text">
        <string>Записать в файл</string>
       </property>
      </widget>
     </item>
-    <item>
+    <item row="0" column="1">
      <widget class="QPushButton" name="graph">
       <property name="text">
        <string>Показать графы</string>
