--- a/QT/second_window.ui
+++ b/QT/second_window.ui
@@ -39,7 +39,7 @@
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>0</x>
@@ -48,15 +48,22 @@
      <height>25</height>
     </rect>
    </property>
-   <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="0">
+   <layout class="QHBoxLayout" name="horizontalLayout">
+    <item>
      <widget class="QPushButton" name="write">
       <property name="text">
-       <string>Записать в файл</string>
+       <string>Сохранить в текстовом файле</string>
       </property>
      </widget>
     </item>
-    <item row="0" column="1">
+    <item>
+     <widget class="QPushButton" name="writeXML">
+      <property name="text">
+       <string>Сохранить XML</string>
+      </property>
+     </widget>
+    </item>
+    <item>
      <widget class="QPushButton" name="graph">
       <property name="text">
        <string>Показать графы</string>
