--- a/QT/second_window.ui
+++ b/QT/second_window.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Currence</string>
+   <string>Currency</string>
   </property>
   <property name="windowIcon">
    <iconset theme="zoom-in">
